--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "@fortawesome/fontawesome-free": "^5.12.0",
+        "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -26,6 +27,13 @@
     "dependencies": {
         "admin-lte": "^3.0.1",
         "laravel-echo": "^1.6.1",
-        "pusher-js": "^5.0.3"
+        "material-design-icons-iconfont": "^5.0.1",
+        "material-icons": "^0.3.1",
+        "moment": "^2.24.0",
+        "pusher-js": "^5.0.3",
+        "sweetalert2": "^9.5.4",
+        "vform": "^1.0.1",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.1.3"
     }
 }
