--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@mdi/font": "^4.7.95",
         "admin-lte": "^3.0.1",
+        "font-awesome": "^4.7.0",
         "laravel-echo": "^1.6.1",
         "material-design-icons-iconfont": "^5.0.1",
         "material-icons": "^0.3.1",
