--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "admin-lte": "^3.0.1",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.6.1",
+        "laravel-vue-pagination": "^2.3.1",
         "material-design-icons-iconfont": "^5.0.1",
         "material-icons": "^0.3.1",
         "moment": "^2.24.0",
@@ -36,6 +37,7 @@
         "sweetalert2": "^9.5.4",
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
-        "vue-router": "^3.1.3"
+        "vue-router": "^3.1.3",
+        "vuejs-datatable": "^2.0.0-alpha.7"
     }
 }
