--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.3",
-        "vuejs-datatable": "^2.0.0-alpha.7"
+        "vuejs-datatable": "^2.0.0-alpha.7",
+        "bootstrap-vue": "latest"
     }
 }
