--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "vue": "^2.5.17",
+        "vue-js-modal": "^1.3.33",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
