--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     },
     "dependencies": {
         "@mdi/font": "^4.7.95",
+        "@popperjs/core": "^2.0.6",
         "admin-lte": "^3.0.1",
         "bootstrap-table": "^1.16.0",
+        "bootstrap-vue": "latest",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.6.1",
         "laravel-vue-pagination": "^2.3.1",
@@ -41,7 +43,6 @@
         "vform": "^1.0.1",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.3",
-        "vuejs-datatable": "^2.0.0-alpha.7",
-        "bootstrap-vue": "latest"
+        "vuejs-datatable": "^2.0.0-alpha.7"
     }
 }
