--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
         "@mdi/font": "^4.7.95",
         "@popperjs/core": "^2.0.6",
         "admin-lte": "^3.0.1",
+        "animate.css": "^3.7.2",
         "bootstrap-table": "^1.16.0",
         "bootstrap-vue": "latest",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.6.1",
+        "laravel-vue-datatable": "^0.5.7",
         "laravel-vue-pagination": "^2.3.1",
         "material-design-icons-iconfont": "^5.0.1",
         "material-icons": "^0.3.1",
@@ -41,6 +43,9 @@
         "sweetalert2": "^9.5.4",
         "tableexport.jquery.plugin": "^1.10.16",
         "vform": "^1.0.1",
+        "vue-loading-overlay": "^3.3.1",
+        "vue-loading-spinner": "^1.0.11",
+        "vue-nprogress": "^0.1.5",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.3",
         "vue-sweetalert2": "^3.0.3",
