--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.3",
         "vue-sweetalert2": "^3.0.3",
+        "vue2-google-maps": "^0.10.7",
         "vuejs-datatable": "^2.0.0-alpha.7"
     }
 }
