--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@popperjs/core": "^2.0.6",
         "admin-lte": "^3.0.1",
         "animate.css": "^3.7.2",
+        "bootstrap-datetime-picker": "^2.4.4",
         "bootstrap-table": "^1.16.0",
         "bootstrap-vue": "latest",
         "font-awesome": "^4.7.0",
@@ -43,6 +44,7 @@
         "sweetalert2": "^9.5.4",
         "tableexport.jquery.plugin": "^1.10.16",
         "vform": "^1.0.1",
+        "vue-bootstrap-datetimepicker": "^5.0.1",
         "vue-loading-overlay": "^3.3.1",
         "vue-loading-spinner": "^1.0.11",
         "vue-nprogress": "^0.1.5",
