--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^1.1",
         "laravelcollective/html": "^6.0",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~4.0",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
