--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "material-icons": "^0.3.1",
         "moment": "^2.24.0",
         "pusher-js": "^5.0.3",
+        "socket.io-client": "^2.3.0",
         "sweetalert2": "^9.5.4",
         "tableexport.jquery.plugin": "^1.10.16",
         "vform": "^1.0.1",
