--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~4.1",
+        "symfony/psr-http-message-bridge": "^2.0",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
     "require-dev": {
