done with doctor page, working on patient pages

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "vue-upload-multiple-image": "^1.1.4",
         "vue2-google-maps": "^0.10.7",
         "vuejs-datatable": "^2.0.0-alpha.7",
-        "vuetify": "^2.2.25"
+        "vuetify": "^2.2.25",
+        "vuex": "^3.3.0"
     }
 }
