--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^0.19.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.15",
         "popper.js": "^1.12",
@@ -40,6 +40,7 @@
         "material-design-icons-iconfont": "^5.0.1",
         "material-icons": "^0.3.1",
         "moment": "^2.24.0",
+        "node-sass": "^4.14.1",
         "pusher-js": "^5.0.3",
         "socket.io": "^2.3.0",
         "socket.io-client": "^2.3.0",
@@ -56,6 +57,7 @@
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.1.3",
         "vue-sweetalert2": "^3.0.3",
+        "vue-textarea-autosize": "^1.1.1",
         "vue-upload-multiple-image": "^1.1.4",
         "vue2-google-maps": "^0.10.7",
         "vuejs-datatable": "^2.0.0-alpha.7",
