--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.2",
         "laravel/passport": "^8.2",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.1",
@@ -21,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "~4.1",
         "symfony/psr-http-message-bridge": "^1.1",
+        "webcraft/laravel-random": "^2.1",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
     "require-dev": {
